<resources>
    <string name="app_name">GithubUser-Sub3</string>
    <string name="avatar_sample">Sample Avatar</string>
    <string name="github_name">Github Name</string>
    <string name="github_username">Github Username</string>
    <string name="location">Location</string>
    <string name="search_hint">Search User</string>
    <string name="find_doodle">Let\'s find someone here!</string>
    <string name="favorite_doodle">Let\'s favorite someone here!</string>
    <string name="avatars_sample">Sample Avatar</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="company">Company</string>
    <string name="title_detail">Detail User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github_logo">Github Logo</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="title_favorite">Favorite User</string>
    <string name="github_user_app">Github User App</string>
    <string name="dark_mode">Dark Mode</string>
</resources>